Squash some more 🐛

--- a/templates/expenses/edit.html
+++ b/templates/expenses/edit.html
@@ -145,7 +145,7 @@
                 </td>
                 <td>
                     <div class="input">
-                        <input type="number" placeholder="Fyll i summa" step="0.01" v-model="expense_part.amount" name="amount[]" required>
+                        <input type="number" placeholder="Fyll i summa" step="0.01" v-model="expense_part.amount" name="amounts[]" required>
                     </div>
                 </div>
                 </td>
