--- a/templates/expenses/new.html
+++ b/templates/expenses/new.html
@@ -16,7 +16,16 @@
     <form method="POST" action="" class="form-horizontal" enctype="multipart/form-data" ref="form">
         <div class="form">
             {% csrf_token %}
-            <div v-on:drag="dragStart" v-on:dragstart="dragStart" v-on:dragover="dragOver" v-on:dragenter="dragOver" v-on:dragend="dragLeave" v-on:dragleave="dragLeave" v-on:drop="dragDrop" class="form-entry">
+            <div
+                v-on:drag="dragStart"
+                v-on:dragstart="dragStart"
+                v-on:dragover="dragOver"
+                v-on:dragenter="dragOver"
+                v-on:dragend="dragLeave"
+                v-on:dragleave="dragLeave"
+                v-on:drop="dragDrop"
+                class="form-entry"
+            >
                 <div class="input file">
                     <div class="file-input">
                         <div class="uploaded-file" v-for="file in files" style="text-align: center">
@@ -108,24 +117,36 @@
                     <span class="info">Kvittodel <span v-text="i + 1"></span></span>
                 </td>
                 <td>
-                  <div class="input">
-                    <div class="select">
-                      <select name="costCentres[]" v-model="expense_part.costCentre" required v-on:change="updateSecondaryCostCentres()">
-                        <option value="">- Välj -</option>
-                        <optgroup label="Nämnder">
-                          <option v-for="costCentre in costCentres.filter(c => c.CostCentreType == 'committee')"
-                                  :key="costCentre.CostCentreID" v-bind:value="costCentre.CostCentreID+','+costCentre.CostCentreName" v-text="costCentre.CostCentreName"></option>
-                        </optgroup>
-                        <optgroup label="Projekt">
-                          <option v-for="costCentre in costCentres.filter(c => c.CostCentreType == 'project')"
-                                  :key="costCentre.CostCentreID" v-bind:value="costCentre.CostCentreID+','+costCentre.CostCentreName" v-text="costCentre.CostCentreName"></option>
-                        </optgroup>
-                        <optgroup label="Övrigt">
-                          <option v-for="costCentre in costCentres.filter(c => c.CostCentreType != 'committee' && c.type != 'project')"
-                                  :key="costCentre.CostCentreID" v-bind:value="costCentre.CostCentreID+','+costCentre.CostCentreName" v-text="costCentre.CostCentreName"></option>
-                        </optgroup>
-                      </select>
-                    </div>
+                    <div class="input">
+                        <div class="select">
+                            <select name="costCentres[]" v-model="expense_part.costCentre" required v-on:change="updateSecondaryCostCentres()">
+                                <option value="">- Välj -</option>
+                                <optgroup label="Nämnder">
+                                    <option
+                                        v-for="costCentre in costCentres.filter(c => c.CostCentreType == 'committee')"
+                                        :key="costCentre.CostCentreID"
+                                        v-bind:value="costCentre.CostCentreID+','+costCentre.CostCentreName"
+                                        v-text="costCentre.CostCentreName"
+                                    ></option>
+                                </optgroup>
+                                <optgroup label="Projekt">
+                                    <option
+                                        v-for="costCentre in costCentres.filter(c => c.CostCentreType == 'project')"
+                                        :key="costCentre.CostCentreID"
+                                        v-bind:value="costCentre.CostCentreID+','+costCentre.CostCentreName"
+                                        v-text="costCentre.CostCentreName"
+                                    ></option>
+                                </optgroup>
+                                <optgroup label="Övrigt">
+                                    <option
+                                        v-for="costCentre in costCentres.filter(c => c.CostCentreType != 'committee' && c.type != 'project')"
+                                        :key="costCentre.CostCentreID"
+                                        v-bind:value="costCentre.CostCentreID+','+costCentre.CostCentreName"
+                                        v-text="costCentre.CostCentreName"
+                                    ></option>
+                                </optgroup>
+                            </select>
+                        </div>
                     </div>
                 </td>
                 <td>
@@ -168,7 +189,7 @@
                 </td>
                 <td>
                     <div class="input">
-                        <input type="number" placeholder="Fyll i summa" step="0.01" v-model="expense_part.amount" name="amount[]" required>
+                        <input type="number" placeholder="Fyll i summa" step="0.01" v-model="expense_part.amount" name="amounts[]" required>
                     </div>
                 </div>
                 </td>
@@ -234,7 +255,7 @@
         methods: {
             updateSecondaryCostCentres: function () {
                 for (const part of this.expense_parts) {
-                    if (part.costCentre == '') continue;
+                    if (part.costCentre === '') continue;
                     if (!this.secondaryCostCentres.has(part.costCentre)) {
                         fetch('{{ budget_url }}/api/SecondaryCostCentres?id=' + part.costCentre.split(',')[0])
                             .then(res => res.json())
@@ -248,7 +269,7 @@
             },
             updateBudgetLines: function () {
                 for (const part of this.expense_parts) {
-                    if (part.secondaryCostCentre == '') continue;
+                    if (part.secondaryCostCentre === '') continue;
                     if (!this.budgetLines.has(part.secondaryCostCentre)) {
                         fetch('{{ budget_url }}/api/BudgetLines?id=' + part.secondaryCostCentre.split(',')[0])
                             .then(res => res.json())
