--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
         {% comment "For later versions" %}
         <ul class="info">
             <li>Du har <a href="" v-tooltip="{ content: 'Muta möte<br>Teambuilding<br>Ledslingor' }">8 kvitton</a> du kan <a href="">attestera</a>.</li>
-            <li>Det finns <a href="">5 kvitton</a> att <a href="">bekräfta i kvittopärmen</a>.</li>
+            <li>Det finns <a href="">5 kvitton</a> att <a href="">kontrollera</a>.</li>
             <li><a href="">3 personer</a> väntar på <a href="">utbetalning</a>.</li>
         </ul>
         {% endcomment %}
@@ -44,7 +44,7 @@
             Därefter är det fritt fram att registrera kvitton i systemet.
         </p>
 
-        <p>I Cashflow laddar du upp kvitton för dina utlägg digitalt. Detta för att förenkla sektionens ekonomiska arbete. Tyvärr, på grund av hur lagstiftningen kring bokföring ser ut, behöver man fortfarande lämna in kvittot fysiskt i kvittopärmen som finns i META.</p>
+        <p>I Cashflow laddar du upp kvitton för dina utlägg digitalt. Detta för att förenkla sektionens ekonomiska arbete. Kvittot bör fortfarande sparas ifall någonting skulle behövas lämnas tillbaka eller liknande.</p>
 
         <p>När du laddat upp ett kvitto kan du följa kvittot från din användarsida och se när det är godkänt samt när det är utbetalat. På så sätt kan du enkelt jämföra dina bankhändelser med Cashflow och vara säker på att du fått tillbaka allt.</p>
 
@@ -52,10 +52,7 @@
 
         <ol>
             <li><b>Registrering.</b> Du som köpt något åt sektionen registrerar ditt kvitto här i Cashflow</li>
-            <li><b>Kvittopärmen.</b> Du sätter därefter in kvittot på en <u><a href="/static/kvittomall.pdf">sån här
-            mall</a></u> i METAs kvittopärm
-        </li>
-        <li><b>Kvittokontroll.</b> Sektionens kassör kontrollerar att kvittot är i kvittopärmen</li>
+        <li><b>Kvittokontroll.</b> Sektionens kassör kontrollerar att kvittot uppfyller kravet för ett kvitto samt ser att det inscannade kvitto är av god kvalitet</li>
         <li><b>Attestering.</b> Din nämndordförande, kassören eller ekonomiansvarig godkänner ditt kvitto.</li>
         <li><b>Utbetalning.</b> Din nämndordförande, kassören eller ekonomiansvarig betalar ut kvittot. Flera kvitton
             kan betalas ut samtidigt.
