--- a/templates/admin/main.html
+++ b/templates/admin/main.html
@@ -25,7 +25,7 @@
                 {% if user.profile.may_view_confirm %}
                     <li>
                         <a href="{% url 'admin-confirm' %}">
-                            Bekräfta i kvitto
+                            Kontrollera kvitton
                             {% if counts.confirm > 0 %}
                                 <span class="notification">{{ counts.confirm }}</span>
                             {% endif %}
