--- a/templates/admin/confirm/overview.html
+++ b/templates/admin/confirm/overview.html
@@ -1,6 +1,6 @@
 {% extends "../main.html" %}
 
-{% block title %}kontrollera kvitton{% endblock %}
+{% block title %}Kontrollera kvitton{% endblock %}
 
 {% block content %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.3/fetch.min.js"></script>
