--- a/templates/admin/confirm/overview.html
+++ b/templates/admin/confirm/overview.html
@@ -1,12 +1,12 @@
 {% extends "../main.html" %}
 
-{% block title %}Kontrollera kvitton{% endblock %}
+{% block title %}Bekräfta kvitton{% endblock %}
 
 {% block content %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.3/fetch.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.2/vue.min.js"></script>
 <div id="data">
-    <p>Här kan du hitta alla kvitton som inte kontrollerats.</p>
+    <p>Här kan du hitta alla kvitton som inte bekräftats.</p>
     <label for="digital" style="padding-right: 0.5em;">Visa endast digitala</label><input v-model="digital" type="checkbox" id="digital" /><br />
     <label for="analog" style="padding-right: 0.5em;">Visa endast analoga</label><input v-model="analog" type="checkbox" id="analog" />
     <table v-if="expenses.length > 0">
@@ -24,11 +24,11 @@
             <td v-if="!expense.confirmed">
                 <form v-on:submit.prevent="conf(expense)" method="POST" :action="'expense/' + expense.id + '/confirm/'">
                     {% csrf_token %}
-                    <button class="theme-color btn-color" v-on:click="conf(expense, $event)">Godkänd kontroll</button>
+                    <button class="theme-color btn-color" v-on:click="conf(expense, $event)">Bekräfta giltighet</button>
                 </form>
             </td>
             <td v-else>
-                Kontrollerad
+                Bekräftad
             </td>
             <td><a :href="'/expenses/' + expense.id + '/'" v-text="expense.id"></a></td>
             <td v-if="!(digital || analog)"><p v-if="expense.is_digital">Ja</p><p v-else-if="expense.is_digital == false">Nej</p><p v-else>👻</p></td>
