--- a/templates/expenses/show.html
+++ b/templates/expenses/show.html
@@ -106,7 +106,7 @@
                 </td>
             </tr>
             <tr>
-                <th>Kontrollerat:</th>
+                <th>Bekräftat:</th>
                 <td v-if="expense.confirmed">
                     [[expense.confirmed_by]]  ([[expense.confirmed_date]])
                     {% if user.profile.may_unconfirm %}
@@ -236,9 +236,9 @@
                     confirmed: true,
                     confirmed_by: "{{ expense.confirmed_by.get_full_name }}",
                     confirmed_date: "{{ expense.confirmed_at }}",
-                    btn_message: "Ta bort kontroll",
+                    btn_message: "Ta bort bekräftelse",
                     {% else %}
-                    btn_message: "Godkänd kontroll",
+                    btn_message: "Godkänd bekräftelse",
                     confirmed: false,
                     {%endif%}
                 },
@@ -269,7 +269,7 @@
                         this.expense.confirmed = true;
                         this.expense.confirmed_date = (new Date()).toLocaleDateString('sv-SE', {year: 'numeric', month: 'long', day: 'numeric' })
                         this.expense.confirmed_by = this.user.full_name;
-                        this.expense.btn_message = "Ta bort kontroll"
+                        this.expense.btn_message = "Ta bort bekräftelse"
                     } else {
                         this.expense.btn_message = "Error! Försök igen"
                     }
@@ -292,7 +292,7 @@
                         this.expense.confirmed = false;
                         this.expense.confirmed_date = null;
                         this.expense.confirmed_by = null;
-                        this.expense.btn_message = "Godkänd kontroll"
+                        this.expense.btn_message = "Godkänd bekräftelse"
                     } else {
                         this.expense.btn_message = "Error! Försök igen"
                     }
