--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
         {% comment "For later versions" %}
         <ul class="info">
             <li>Du har <a href="" v-tooltip="{ content: 'Muta möte<br>Teambuilding<br>Ledslingor' }">8 kvitton</a> du kan <a href="">attestera</a>.</li>
-            <li>Det finns <a href="">5 kvitton</a> att <a href="">kontrollera</a>.</li>
+            <li>Det finns <a href="">5 kvitton</a> att <a href="">bekräfta</a>.</li>
             <li><a href="">3 personer</a> väntar på <a href="">utbetalning</a>.</li>
         </ul>
         {% endcomment %}
@@ -52,7 +52,7 @@
 
         <ol>
             <li><b>Registrering.</b> Du som köpt något åt sektionen registrerar ditt kvitto här i Cashflow</li>
-        <li><b>Kvittokontroll.</b> Sektionens kassör kontrollerar att kvittot uppfyller kravet för ett kvitto samt ser att det inscannade kvitto är av god kvalitet</li>
+        <li><b>Kvittokontroll.</b> Sektionens kassör bekräftar att kvittot uppfyller kravet för ett kvitto samt ser att det inscannade kvitto är av god kvalitet</li>
         <li><b>Attestering.</b> Din nämndordförande, kassören eller ekonomiansvarig godkänner ditt kvitto.</li>
         <li><b>Utbetalning.</b> Din nämndordförande, kassören eller ekonomiansvarig betalar ut kvittot. Flera kvitton
             kan betalas ut samtidigt.
