--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
 
         <ol>
             <li><b>Registrering.</b> Du som köpt något åt sektionen registrerar ditt kvitto här i Cashflow</li>
-        <li><b>Kvittokontroll.</b> Sektionens kassör bekräftar att kvittot uppfyller kravet för ett kvitto samt ser att det inscannade kvitto är av god kvalitet</li>
+        <li><b>Kvittobekräftelse.</b> Sektionens kassör bekräftar att kvittot uppfyller kravet för ett kvitto samt ser att det inscannade kvitto är av god kvalitet</li>
         <li><b>Attestering.</b> Din nämndordförande, kassören eller ekonomiansvarig godkänner ditt kvitto.</li>
         <li><b>Utbetalning.</b> Din nämndordförande, kassören eller ekonomiansvarig betalar ut kvittot. Flera kvitton
             kan betalas ut samtidigt.
