--- a/templates/expenses/show.html
+++ b/templates/expenses/show.html
@@ -106,7 +106,7 @@
                 </td>
             </tr>
             <tr>
-                <th>Bekräftat:</th>
+                <th>Giltighet bekräftad:</th>
                 <td v-if="expense.confirmed">
                     [[expense.confirmed_by]]  ([[expense.confirmed_date]])
                     {% if user.profile.may_unconfirm %}
