`Godkänn bekräftelse` (?) -> `Bekräfta giltighet`

--- a/templates/expenses/show.html
+++ b/templates/expenses/show.html
@@ -245,7 +245,7 @@
                     confirmed_date: "{{ expense.confirmed_at }}",
                     btn_message: "Ta bort bekräftelse",
                     {% else %}
-                    btn_message: "Godkänn bekräftelse",
+                    btn_message: "Bekräfta giltighet",
                     confirmed: false,
                     {%endif%}
                 },
@@ -299,7 +299,7 @@
                         this.expense.confirmed = false;
                         this.expense.confirmed_date = null;
                         this.expense.confirmed_by = null;
-                        this.expense.btn_message = "Godkänn bekräftelse"
+                        this.expense.btn_message = "Bekräfta giltighet"
                     } else {
                         this.expense.btn_message = "Error! Försök igen"
                     }
