--- a/templates/admin/main.html
+++ b/templates/admin/main.html
@@ -66,7 +66,7 @@
                 <li><a href="{% url 'admin-search-verification' %}">Sök verifikation</a></li>
                 <li><a href="{% url 'admin-list-verification' %}">Lista verifikat</a></li>
                 {% if user.profile.may_firmatecknare %}
-                <li><a href="{% url 'admin-account-auth' %}">Autentisera Fortnox</a></li>
+                <li><a href="{% url 'admin-auth' %}">Autentisera Fortnox</a></li>
                 {% endif %}
             </ul>
         </div>
