Co-authored-by: Adam <adasjo@live.se>

--- a/templates/expenses/edit.html
+++ b/templates/expenses/edit.html
@@ -147,7 +147,7 @@
                     <div class="input">
                         <input type="number" placeholder="Fyll i summa" step="0.01" v-model="expense_part.amount" name="amounts[]" required>
                     </div>
-                </div>
+                <!--</div> !--What is this doing here?-->
                 </td>
             </tr>
             <tfoot>
